# prjSS

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
cdk/: app.py
cdk/cdk/: cdk_stack.py
cdk/cdk.out/: CdkStack.assets.json  CdkStack.metadata.json  CdkStack.template.json  manifest.json  tree.json
cdk/cdk.out/asset.b859c7752247eb2619acdc87f7f71d14ac8261b98743017f5639371b8991abdc/prjSS.egg-info/: PKG-INFO  SOURCES.txt
cdk/cdk.out/asset.e0c3c83bcbfc4ced93d9a436bd8481ca7b1b1c55ef9bbedfc0afc38f18511146/: main.py
cdk/cdk.out/asset.e0c3c83bcbfc4ced93d9a436bd8481ca7b1b1c55ef9bbedfc0afc38f18511146/prjSS.egg-info/: PKG-INFO
cdk/cdk.out/asset.ee0f042e10afac89d49be89ea5a0fcd2ee82146cfd178e50656328c522c2c723/: main.py
src/prjSS.egg-info/: PKG-INFO
tests/: __init__.py  test_main.py
