[project]
name = "prjSS"
version = "0.1.0"
description = "A new Python project named prjSS."
authors = [
  { name = "Belesti Asress", email = "belestima@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.setuptools]
py-modules = ["main"]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
